--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Capstone Project</title>
+	<title>Full Stack Web Developer</title>
 
 	<!-- for icon -->
 	<!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
@@ -17,18 +17,6 @@
 <body>
 
 
-	<!-- Navbar -->
-	<!-- <nav class="navbar bg-danger fixed-top">
-	  <div class="container-fluid justify-content-center">
-			  <ul class="nav d-flex align-items-center">
-			    <li><a class="dropdown-item" href="#landing">Home</a></li>
-			    <li><a class="dropdown-item" href="#project">Projects</a></li>
-			    <li><a class="navbar-brand text-dark" href="#">R.I.Z</a></li>
-			    <li><a class="dropdown-item" href="#tools">Tools</a></li>
-			    <li><a class="dropdown-item" href="#contact">Contact</a></li>
-			  </ul>
-		</div>
-	</nav> -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-danger">
 	  <a class="navbar-brand d--none" href="#">R.G</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,33 +43,134 @@
 	<!-- End Nav Bar -->
 	<!-- landing -->
 	<div class="container">
-		<div class="row mt-5 new-image">
-			<div class="d-flex flex-column align-items-center text-center my-4" id="landing">
-				<div class="col-md-2 ">
-				<img src="./images/ada.jpg" class="img-fluid rounded-circle border border-dark mt-md-0">
+		<div class="row mt-3 new-image">
+			<div class=" container-fluid d-flex flex-column align-items-center text-center my-4" id="landing">
+				<div class="col-md-2">
+				<img src="./images/ada.jpg" class="img-fluid rounded-circle border border-dark" width="350">
 				</div>
 				<h1>Rieyzy Guerra</h1>
 				<h4>Web Developer</h4>
 				<div class="row">
 					<div class="offset-md-2 col-md-8">
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							Born in 1994, in Indang Cavite. I believe web development
+							can be more diverse and inspiring. With a mission
+							to present the possibilities of web development,
+							I am pursuing new expressions through experiments and
+							thoughts
 						</p>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="row text-dark bg-warning mt-4">
-			
-		</div>
-	</div>
-	<!-- end of landing -->
+		<!-- End of landing page -->
+		<!-- My project -->
+		<h1 class="mt-5 mb-1 text-center">My Projects</h1>
+		<div class="row text-dark mt-3">
+			<div class="p-md-1 d-lg-flex justify-content-center" id="project">
+						<!-- File Card Start -->
+						<div class="card bg-light col-xl-4 mb-5 mb-xl-0 mx-xl-3">
+						  <div class="card-body">
+						  	<img src="./images/file-management.jpg" class="img-fluid">
+						    <h5 class="card-title mt-3">File Management System</h5>
+						    <p class="card-text">
+						    	File management is the process of administering a system that correctly handles digital data. Therefore, an effective file management system improves the overall function of a business workflow. It also organizes important data and provides a searchable database for quick retrieval.
+						    </p>
+						   <small class="text-muted">Last updated 1 min ago</small>
+						  </div>
+						</div>
+						<!-- File Card End -->
 
+						<!-- MOnitoring Card Start -->
+						<div class="card bg-light col-xl-4 mb-5 mb-xl-0 mx-xl-3">
+						  <div class="card-body">
+						  	<img src="./images/monitoring.jpg" class="img-fluid">
+						    <h5 class="card-title mt-3">Monitoring System</h5>
+						    <p class="card-text">
+						    	A monitoring system is software that helps system administrators monitor their infrastructure. These tools monitor system devices, traffic, and applications, and sound the alarm in the event of malfunctions and disruptions. There are lots of monitoring systems on the market, from freeware to professional software.
+						    </p>
+						    <small class="text-muted">Last updated 1 min ago</small>
+						  </div>
+						</div>
+						<!-- Monitoring Card End -->
+
+						<!-- One page Card Start -->
+						<div class="card bg-light col-xl-4 mb-5 mb-xl-0 mx-xl-3">
+						  <div class="card-body">
+						  	<img src="./images/website.jpg" class="img-fluid">
+						    <h5 class="card-title mt-3">Website Project</h5>
+						    <p class="card-text">
+						    	A one-page website has an organized design on a single web page, with many images and minimal text. The long-scrolling design is one of the best website layouts, as it allows you to control the order in which visitors see your content. The easy-to-maintain format adapts well for mobile websites, too.
+						    </p>
+						    <small class="text-muted">Last updated 1 min ago</small>
+						  </div>
+						</div>
+						<!-- onepage  Card End -->
+					</div>
+
+						<div class="row mt-3 second-image col-lg-12">
+							<div class="container-fluid d-flex flex-column align-items-center text-center my-4
+							col-md-10" id="tools">
+								<h2 class="text-uppercase">Tools I Use</h4>
+									<div class="col-md-12">
+										<div id="other-tools" class="p-3 d-flex flex-md-column">
+					                    <div id="tools-1" class="d-flex flex-wrap justify-content-center mb-4">
+					                        <img width="100" src="images/logo-mongodb.png"/>
+					                        <img width="100" src="images/logo-nodejs.png"/>
+					                        <img width="100" src="images/logo-expressjs.png"/>
+					                        <img width="100" src="images/logo-react.png"/>
+					                        <img width="100" src="images/logo-heroku.png"/>
+					                        <img width="100" src="images/logo-laravel.png"/>
+					                    </div>
+					                    <div id="tools-2" class="d-flex flex-wrap justify-content-center mb-4">
+					                        <img width="100" src="images/logo-git.png"/>
+					                        <img width="100" src="images/logo-sublime-text-3.png"/>
+					                        <img width="100" src="images/logo-postman.png"/>
+					                        <img width="100" src="images/logo-gitlab-ci-cd.png"/>
+					                        <img width="100" src="images/angular-logo.png"/>
+					                        <img width="100" src="images/vscode.png"/>
+					                    </div>
+					                
+									</div>
+								</div>
+							</div>
+						</div>
+
+				</div>
+					<!-- start contact -->
+						<h1 class="mt-5 mb-1 text-center">Contact</h1>
+						<div class="row" id="contact">
+								<div class="col-md-6 my-4">
+									<h4 class="text-center">Visit Me</h4>
+									<iframe id="google_map" src="https://maps.google.com/maps?q=centro%20escolar%20university%20manila&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+								</div>
+								<div class="col-md-6 my-4">
+									<h4 class="text-center">Message Me</h4>
+									<form>
+										<div class="form-group">
+											<label>Full Name</label>
+											<input type="text" class="form-control">
+										</div>
+										<div class="form-group">
+											<label>Email Address</label>
+											<input type="email" class="form-control">
+										</div>
+										<div class="form-group">
+											<label>Message</label>
+											<textarea class="form-control" rows="5"></textarea>
+										</div>
+										<button type="submit" class="btn btn-outline-danger mb-3">Submit</button>
+									</form>
+								</div>
+						</div>
+						<!-- End contact -->
+	</div>
+	
+			<footer class="d-flex justify-content-center d-gap-4 bg-danger p-3 text-white">
+            <div>&copy; 2023 My Website.</div>
+            <div>|</div>
+            <div>All rights reserved.</div>
+        </footer>
 
 
 
