--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-danger">
-	  <a class="navbar-brand d--none" href="#">R.G</a>
+	  <a class="navbar-brand d--none" href="#landing">R.G</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
 
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	    <ul class="navbar-nav ml-auto text-center text-md-left">
-	      <li class="nav-item active">
+	      <li class="nav-item">
 	        <a class="nav-link" href="#landing">Home<span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item">
@@ -44,7 +44,7 @@
 	<!-- landing -->
 	<div class="container">
 		<div class="row mt-3 new-image">
-			<div class=" container-fluid d-flex flex-column align-items-center text-center my-4" id="landing">
+			<div class="d-flex flex-column align-items-center text-center my-4" id="landing">
 				<div class="col-md-2">
 				<img src="./images/ada.jpg" class="img-fluid rounded-circle border border-dark" width="350">
 				</div>
@@ -66,7 +66,7 @@
 		<!-- End of landing page -->
 		<!-- My project -->
 		<h1 class="mt-5 mb-1 text-center">My Projects</h1>
-		<div class="row text-dark mt-3">
+		<div class="container text-dark mt-3">
 			<div class="p-md-1 d-lg-flex justify-content-center" id="project">
 						<!-- File Card Start -->
 						<div class="card bg-light col-xl-4 mb-5 mb-xl-0 mx-xl-3">
@@ -76,7 +76,7 @@
 						    <p class="card-text">
 						    	File management is the process of administering a system that correctly handles digital data. Therefore, an effective file management system improves the overall function of a business workflow. It also organizes important data and provides a searchable database for quick retrieval.
 						    </p>
-						   <small class="text-muted">Last updated 1 min ago</small>
+						   <small class="text-muted">Last updated 1 hour ago</small>
 						  </div>
 						</div>
 						<!-- File Card End -->
@@ -89,7 +89,7 @@
 						    <p class="card-text">
 						    	A monitoring system is software that helps system administrators monitor their infrastructure. These tools monitor system devices, traffic, and applications, and sound the alarm in the event of malfunctions and disruptions. There are lots of monitoring systems on the market, from freeware to professional software.
 						    </p>
-						    <small class="text-muted">Last updated 1 min ago</small>
+						    <small class="text-muted">Last updated 1 hour ago</small>
 						  </div>
 						</div>
 						<!-- Monitoring Card End -->
@@ -102,17 +102,14 @@
 						    <p class="card-text">
 						    	A one-page website has an organized design on a single web page, with many images and minimal text. The long-scrolling design is one of the best website layouts, as it allows you to control the order in which visitors see your content. The easy-to-maintain format adapts well for mobile websites, too.
 						    </p>
-						    <small class="text-muted">Last updated 1 min ago</small>
+						    <small class="text-muted">Last updated 1 hour ago</small>
 						  </div>
 						</div>
 						<!-- onepage  Card End -->
 					</div>
-
-						<div class="row mt-3 second-image col-lg-12">
-							<div class="container-fluid d-flex flex-column align-items-center text-center my-4
-							col-md-10" id="tools">
-								<h2 class="text-uppercase">Tools I Use</h4>
-									<div class="col-md-12">
+					<div class="container mt-5 second-image">
+							<div class="d-flex flex-column align-items-center text-center my-4" id="tools">
+								<h2 class="text-uppercase mt-3">Tools I Use</h4>
 										<div id="other-tools" class="p-3 d-flex flex-md-column">
 					                    <div id="tools-1" class="d-flex flex-wrap justify-content-center mb-4">
 					                        <img width="100" src="images/logo-mongodb.png"/>
@@ -130,19 +127,17 @@
 					                        <img width="100" src="images/angular-logo.png"/>
 					                        <img width="100" src="images/vscode.png"/>
 					                    </div>
-					                
-									</div>
 								</div>
 							</div>
 						</div>
-
 				</div>
 					<!-- start contact -->
 						<h1 class="mt-5 mb-1 text-center">Contact</h1>
 						<div class="row" id="contact">
 								<div class="col-md-6 my-4">
 									<h4 class="text-center">Visit Me</h4>
-									<iframe id="google_map" src="https://maps.google.com/maps?q=centro%20escolar%20university%20manila&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+									<iframe id="google_map" src="https://maps.google.com/maps?q=centro%20escolar%20university%20manila&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+									 class="col-12"></iframe>
 								</div>
 								<div class="col-md-6 my-4">
 									<h4 class="text-center">Message Me</h4>
@@ -159,14 +154,15 @@
 											<label>Message</label>
 											<textarea class="form-control" rows="5"></textarea>
 										</div>
-										<button type="submit" class="btn btn-outline-danger mb-3">Submit</button>
+										<button type="submit" class="btn btn-outline-danger mb-3 btn-block">Submit</button>
 									</form>
 								</div>
 						</div>
 						<!-- End contact -->
 	</div>
-	
-			<footer class="d-flex justify-content-center d-gap-4 bg-danger p-3 text-white">
+		
+		
+		<footer class="d-flex justify-content-center bg-danger p-3 text-white">
             <div>&copy; 2023 My Website.</div>
             <div>|</div>
             <div>All rights reserved.</div>
