--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 	<!-- for icon -->
 	<!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
-	
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500;700&family=Water+Brush&display=swap" rel="stylesheet">
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 	<!-- External CSS -->
@@ -18,7 +21,7 @@
 
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-danger">
-	  <a class="navbar-brand d--none" href="#landing">R.G</a>
+	  <a class="navbar-brand d-none d-xl-block" href="#landing" id="logo">R.G</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -45,7 +48,7 @@
 	<div class="container">
 		<div class="row mt-3 new-image">
 			<div class="d-flex flex-column align-items-center text-center my-4" id="landing">
-				<div class="col-md-2">
+				<div class="col-md-4">
 				<img src="./images/ada.jpg" class="img-fluid rounded-circle border border-dark" width="350">
 				</div>
 				<h1>Rieyzy Guerra</h1>
@@ -65,9 +68,9 @@
 		</div>
 		<!-- End of landing page -->
 		<!-- My project -->
-		<h1 class="mt-5 mb-1 text-center">My Projects</h1>
+		<h1 class="mt-5 mb-1 text-center" id="project">My Projects</h1>
 		<div class="container text-dark mt-3">
-			<div class="p-md-1 d-lg-flex justify-content-center" id="project">
+			<div class="p-md-1 d-lg-flex justify-content-center" >
 						<!-- File Card Start -->
 						<div class="card bg-light col-xl-4 mb-5 mb-xl-0 mx-xl-3">
 						  <div class="card-body">
@@ -109,7 +112,7 @@
 					</div>
 					<div class="container mt-5 second-image">
 							<div class="d-flex flex-column align-items-center text-center my-4" id="tools">
-								<h2 class="text-uppercase mt-3">Tools I Use</h4>
+								<h1 class="mt-4">Tools I Use</h1>
 										<div id="other-tools" class="p-3 d-flex flex-md-column">
 					                    <div id="tools-1" class="d-flex flex-wrap justify-content-center mb-4">
 					                        <img width="100" src="images/logo-mongodb.png"/>
@@ -132,8 +135,8 @@
 						</div>
 				</div>
 					<!-- start contact -->
-						<h1 class="mt-5 mb-1 text-center">Contact</h1>
-						<div class="row" id="contact">
+						<h1 class="mt-5 mb-1 text-center" id="contact">Contact</h1>
+						<div class="row">
 								<div class="col-md-6 my-4">
 									<h4 class="text-center">Visit Me</h4>
 									<iframe id="google_map" src="https://maps.google.com/maps?q=centro%20escolar%20university%20manila&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
@@ -173,5 +176,6 @@
 	<!-- JS Bundle -->
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 </html>
